--- a/index.html
+++ b/index.html
@@ -68,6 +68,6 @@
                     </div>
                 </section>
     </main>
-    <script src="./script.js"></script>
+    <script type="module" src="./script.js"></script>
 </body>
 </html>
