--- a/listReport/listOrder.html
+++ b/listReport/listOrder.html
@@ -31,7 +31,10 @@
         </section>
         
     </main>
-    <script type="module" src="../controllersReports/listOrder.js"></script>
+    <script type="module">
+        import {functionList} from '../controllersReports/functionList.js'
+        functionList('order', 'numero_orden')
+    </script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jspdf/1.5.3/jspdf.debug.js"></script>
     <script src="https://html2canvas.hertzen.com/dist/html2canvas.min.js"></script>
 </body>
