--- a/listReport/listReports.html
+++ b/listReport/listReports.html
@@ -28,7 +28,10 @@
             <div id="list"></div>
         </section>
     </main>
-    <script type="module" src="../controllersReports/listReports.js"></script>
+    <script type="module">
+        import { functionList } from '../controllersReports/functionList.js'
+        functionList('reports', 'nombre')
+    </script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jspdf/1.5.3/jspdf.debug.js"></script>
     <script src="https://html2canvas.hertzen.com/dist/html2canvas.min.js"></script>
 </body>
