se agrega libreria para calendario en las entradas de fecha , y se realiza modificacion al impplemento de modificacion, colocando las opciones en laos campos de entrada para evitar ingreso de datos erroneos

--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <title>ReporteF</title>
     <link rel="stylesheet" href="./style.css">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/flatpickr/dist/flatpickr.min.css">
 </head>
 <body>
     <header>
@@ -68,6 +69,8 @@
                     </div>
                 </section>
     </main>
+    <script src="https://cdn.jsdelivr.net/npm/flatpickr"></script>
+    <script type="module" src="./controllersReports/calendario.js"></script>
     <script type="module" src="./script.js"></script>
 </body>
 </html>
