--- a/listReport/listOrder.html
+++ b/listReport/listOrder.html
@@ -5,6 +5,7 @@
     <meta charset="UTF-8">
     <title>Lista de reportes por orden</title>
     <link rel="stylesheet" href="../style.css">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/flatpickr/dist/flatpickr.min.css">
 </head>
 
 <body>
@@ -35,6 +36,8 @@
         import {functionList} from '../controllersReports/functionList.js'
         functionList('order', 'numero_orden')
     </script>
+    <script src="https://cdn.jsdelivr.net/npm/flatpickr"></script>
+    <script type="module" src="../controllersReports/calendario.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jspdf/1.5.3/jspdf.debug.js"></script>
     <script src="https://html2canvas.hertzen.com/dist/html2canvas.min.js"></script>
 </body>
