--- a/index.html
+++ b/index.html
@@ -35,31 +35,31 @@
                         <form action="" class="containerForm" id="formdata">
                             <div class="container">
                                 <label for="datetimeWarning">fecha de aviso</label>
-                                <input type="datetime" name="datetimeWarning" id="datetimeWarning" placeholder="DD-MM-AAAA" required>
+                                <input type="datetime" name="fechaAviso" id="datetimeWarning" placeholder="DD-MM-AAAA" required>
                                 <label for="datetimeExecute">fecha de ejecucion</label>
-                                <input type="datetime" name="datetimeExecute" id="datetimeExecute" placeholder="DD-MM-AAAA" required>
+                                <input type="datetime" name="fechaEjecucion" id="datetimeExecute" placeholder="DD-MM-AAAA" required>
                                 <label for="">Reportada por:</label>
-                                <select name="reports" id="reports" required></select>
+                                <select name="reportero" id="reports" required></select>
                                 <label for="">Descripcion</label>
-                                <select name="description" id="description" required></select>
+                                <select name="descripcionMaquina" id="description" required></select>
                             </div>
                             <div class="container">
                                 <label for="workroutine">Rutina de trabajo</label>
-                                <select name="workroutine" id="workroutine" required></select>
+                                <select name="rutinaTrabajo" id="workroutine" required></select>
                                 <label for="assigned">Asignada a:</label>
-                                <select name="assigned" id="assigned" required></select>
+                                <select name="asignado" id="assigned" required></select>
                             </div>
                             <div class="container">
                                 <label for="">Averia reportada</label>
-                                <input type="text" name="titleText" id="titleText" required>
+                                <input type="text" name="reporteFalla" id="titleText" required>
                             </div>
                             <div class="container">
                                 <label for="">Trabajo a realizar:</label>
-                                <input type="text" name="report" id="report" required>
+                                <input type="text" name="trabajoEfectuar" id="report" required>
                             </div>
                             <div class="container">
                                 <label for="">Comentarios</label>
-                                <input type="text" name="comment" id="comment">
+                                <input type="text" name="comentarios" id="comment">
                             </div>
                             <div class="container">
                                 <input type="submit" value="Reportar" id="submit">
