se crea archivos , elementDelete para funcion de elemetos de eliminar reporte, elementSelection ara los elementos de seleccion en la funcion de modificacion de reporte, formatDate.js para colocar las funciones que da formatoa la fechaq y realiza prueba a la fecha,request.js estan las funciones de peticion de datos, messageError.js donde estan las funciones que maneja los mensajes a mostrar cuando hay un error en la aplicacion, selectData.js para las fucniones de seleccion de datos, y todo esto para questas funciones no esten presente cuando no sean llamadas de igual manera las imporetaciones de lista como listUpdate se hacen de manera dinamica cada vez que sea llamada por el evento de cada boton de manera individual, se elimina functionData.js y se cambia functionList.js a listReport.js de igual manera la funcion que maneja

--- a/listReport/listMachine.html
+++ b/listReport/listMachine.html
@@ -32,8 +32,8 @@
         </section>
     </main>
     <script type="module">
-        import { functionList } from '../controllersReports/functionList.js'
-        functionList('machine', 'descripcion')
+        import { listReport } from '../controllersReports/listReport.js'
+        listReport('machine', 'descripcion')
     </script>
     <script src="https://cdn.jsdelivr.net/npm/flatpickr"></script>
     <script type="module" src="../controllersReports/calendario.js"></script>
