--- a/listReport/listReports.html
+++ b/listReport/listReports.html
@@ -30,8 +30,8 @@
         </section>
     </main>
     <script type="module">
-        import { functionList } from '../controllersReports/functionList.js'
-        functionList('reports', 'nombre')
+        import { listReport } from '../controllersReports/listReport.js'
+        listReport('reports', 'nombre')
     </script>
     <script src="https://cdn.jsdelivr.net/npm/flatpickr"></script>
     <script type="module" src="../controllersReports/calendario.js"></script>
