--- a/listReport/listOrder.html
+++ b/listReport/listOrder.html
@@ -33,8 +33,8 @@
         
     </main>
     <script type="module">
-        import {functionList} from '../controllersReports/functionList.js'
-        functionList('order', 'numero_orden')
+        import { listReport } from '../controllersReports/listReport.js'
+        listReport('order', 'numero_orden')
     </script>
     <script src="https://cdn.jsdelivr.net/npm/flatpickr"></script>
     <script type="module" src="../controllersReports/calendario.js"></script>
